--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
     <a href="#" language='Somali'>Somali</a>
   </div>
   </div>
-  
+
   <!--title-->
-  <p class="title">Welcome to JunuduRahman Center Ruqya</p>
+    <p class="title">Welcome to Junudu Rahman Center Ruqya</p>
   <!--logo-->
-  <div class="img-container">
-    <img src="img/Slogo.png">
-  </div>
+    <div class="img-container">
+      <img src="img/Slogo.png">
+    </div>
+  
 
 <!--footer-->
 <div class="footer">
