--- a/Maclumaat.html
+++ b/Maclumaat.html
@@ -9,6 +9,7 @@
     <style>
         body{
           font-family: 'Tajawal', sans-serif;
+          background-color: #ddd;
         }
 
         .container{
