--- a/Maclumaat.html
+++ b/Maclumaat.html
@@ -24,7 +24,7 @@
          }
         .para{
           font-size: 20px;
-          justify-content: center;
+          text-align: center;
           line-height: 40px;
         }
         span{
