--- a/Maclumaat.html
+++ b/Maclumaat.html
@@ -9,7 +9,6 @@
     <style>
         body{
           font-family: 'Tajawal', sans-serif;
-          background-color: #ddd;
         }
 
         .container{
@@ -19,13 +18,13 @@
     
         #title{
             font-size: 33px;
-            text-align: center;
             color:#00b489;
+            text-align: center;
          }
         .para{
           font-size: 20px;
-          text-align: center;
           line-height: 40px;
+          text-align: left;
         }
         span{
             color: #00b489;
@@ -33,7 +32,7 @@
     
         @media (max-width: 600px){
         .container{
-            margin:0px;
+            margin:40px;
             justify-items: center;
         }
         #title{
@@ -43,6 +42,7 @@
         .para{
           font-size: 18px;
           line-height: 40px;
+          text-align: center;
         }
         span{
             color: #00b489;
