--- a/Maclumaat.html
+++ b/Maclumaat.html
@@ -42,7 +42,7 @@
         .para{
           font-size: 18px;
           line-height: 40px;
-          text-align: center;
+          text-align: left;
         }
         span{
             color: #00b489;
